<resources>
    <string name="app_name">TransferX</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in">Log in</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="or">or</string>
    <string name="log_in">Sign in</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_an_account">Create an account</string>
    <string name="login_details">Login details</string>
    <string name="password_rules">Password must contain 8 characters and 1 capital letter.</string>
    <string name="next">NEXT</string>
    <string name="next_register">Next</string>
    <string name="steps">Step %d</string>
    <string name="lets_start">Create an account</string>
    <string name="create_account">Create my account</string>
    <string name="terms">"By signing up, you are agreeing to our<b> Terms &amp; Conditions</b> and <b>Privacy Policy.</b>"</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">\u0020 Reset it here.</string>
    <string name="forgot_pin">Forgot your PIN?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pin">Security PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="no_match_pin">Entered PIN does not match</string>
    <string name="deleted_pin">Looks like you haven\'t set a PIN yet!</string>
    <string name="landing_send_money">Send money to your loved ones easier and faster.</string>
    <string name="landing_login">Login</string>
    <string name="landing_register">Create an account</string>
    <string name="title_one">Lets Start With You</string>
    <string name="title_two">Your login details</string>
    <string name="set_pin">Set PIN</string>
    <string name="sign_me_up">SIGN ME UP</string>
    <string name="money_logo">money that cares</string>
    <string name="one_step_away">One Step Away</string>
    <string name="send">SEND</string>
    <string name="send_to">Send to</string>
    <string name="recover_title">Use Registration Email</string>
    <string name="recover_desc">We will send  you an email with the a link to change your password</string>
    <string name="password_error">Password should be at least 8 characters and contain one uppercase character and one number.</string>
    <string name="no_match_password">Entered password does not match</string>
    <string name="email_error">Please enter a valid email address.</string>
    <string name="recipient_label">Recipient</string>
    <string name="delivery_label">Delivery Method</string>
    <string name="amount">Amount</string>
    <string name="send_money">Send Money</string>
    <string name="today_rate_label">Today Rate:</string>
    <string name="select_recipient">Select your recipient</string>
    <string name="select_currency_title">Select Currency</string>
    <string name="favourite_recipients">Favourite Recipients</string>
    <string name="add_new">Add New</string>
    <string name="add_card">Add card</string>
    <string name="recent_transfers">Recent transfers</string>
    <string name="zero_value">0</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="settings">Settings</string>
    <string name="first_name_error">You have to input correct first name</string>
    <string name="last_name_error">You have to input correct last name</string>
    <string name="country_error">You have to input correct country</string>
    <string name="phone_error">You have to input correct phone number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="profile">Your Profile</string>
    <string name="profile_label">Profile</string>
    <string name="referals">Referals</string>
    <string name="app_settings">App Settings</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="add_recipients">Add Recipient</string>
    <string name="add_recipientss">Add Recipients</string>
    <string name="recipient_details">Recipient Details</string>
    <string name="new_recipient">New recipient</string>
    <string name="new_recipient_details">Write the details of your new recipient and start sending money to them.</string>
    <string name="add_recipients_and_payment">Add recipients and payment methods to make transfers faster.</string>
    <string name="country">Country</string>
    <string name="choose_country">Choose Country</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_recipient">Delete Recipient</string>
    <string name="empty_list">Empty list</string>
    <string name="edit_recipient">Edit recipient info.</string>
    <string name="view_recipient">View Recipient</string>
    <string name="search">Search</string>
    <string name="notification_title">Notifications</string>
    <string name="payments_title">Payments</string>
    <string name="alerts_title">Alerts</string>
    <string name="news_title">News &amp; Updates</string>
    <string name="wallet_title">Wallet</string>
    <string name="personal_details">Personal Details</string>
    <string name="change_password">Change Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="change_pin">Change PIN</string>
    <string name="upload_documentation">Upload Documentation</string>
    <string name="amount_with_currency">%1$s - %2$s</string>
    <string name="money_that_cares">money that cares</string>
    <string name="hint_email_address">Email address</string>
    <string name="taken_email_address">Email is taken</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Confirm password</string>
    <string name="enter_your_email_address">Email address</string>
    <string name="enter_your_password">Password</string>
    <string name="email_address">email address</string>
    <string name="connection_error">Something wrong with connection</string>
    <string name="generic_error">Oops something went wrong!</string>
    <string name="backend_error">Server is unreachable</string>
    <string name="try_again">Try again</string>
    <string name="user_not_found">User not found</string>
    <string name="wrong_username_or_password">Wrong username &amp; password combination</string>
    <string name="forgot_password_text">Enter your email address and we’ll help you reset your password.</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="first_name_recipient_hint">Enter a first name</string>
    <string name="last_name_recipient_hint">Enter a last name</string>
    <string name="enter_pin">Enter a PIN</string>
    <string name="what_would_you_like">What would you like to do now?</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="title_recover_success">Email is on its way!</string>
    <string name="check_mail">Check your email inbox for a link to reset your password.</string>
    <string name="didnt_receive">Didn’t receive an email? <b>Contact Us</b> and we’ll help.</string>
    <string name="description">TransferX™ provides universal access to financial services. Allow us to point out some of our finest features.</string>
    <string name="get_started">Get started</string>
    <string name="ready_get_started">Ready to get started?</string>
    <string name="almost_ready">You’re almost ready!</string>
    <string name="get_started_desc">Let’s connect your accounts, set up recipients, payments, and more.</string>
    <string name="first_page_desc">Enjoy the confidence of superior encryption technology</string>
    <string name="tutorial_security">You are secure</string>
    <string name="tutorial_automated_transfer">Automated Transfers</string>
    <string name="tutorial_automated_desc">Set up repeat transfers quickly and easily and adjust them at any time.</string>
    <string name="exchange_rate">Exchange Rates</string>
    <string name="tutorial_recipients_desc">Add family, friends, and others to your recipient list to make transfering funds fast and easy.</string>
    <string name="register">Register</string>
    <string name="activity">ACTIVITY</string>
    <string name="transfer">TRANSFER</string>
    <string name="tutorial_recipients">Add Recipients</string>
    <string name="add_recipient">Add new recipient</string>
    <string name="edit">EDIT</string>
    <string name="recipient">Recipient</string>
    <string name="recipient_added_successfully">Recipient added successfully!</string>
    <string name="amount_sent">Amount sent</string>
    <string name="send_amount">Send amount</string>
    <string name="receive_amount">Receive amount</string>
    <string name="enter_send_amount">Enter send amount</string>
    <string name="current_exchange_rate">Current exchange rate</string>
    <string-array name="payment_method">
        <item>PayPal</item>
        <item>Card</item>
    </string-array>
    <string name="select_a_payment_method">Select a payment method</string>
    <string name="add_a_personal_message">Add a personal message</string>
    <string name="message">Message</string>
    <string name="auto_transfer">Repeat transfer?</string>
    <string name="empty_list_activity_desc">This is where you’ll see your recent transfer history. Make someone’s day and transfer money today.</string>
    <string name="send_now">Send now</string>
    <string name="send_later">send later</string>
    <string name="tutorial_wallet_desc">Choose from several different payment methods to make transfering funds simple.</string>
    <string name="tutorial_wallet">Mobile Wallet</string>
    <string name="empty_list_recipients_desc">You have not yet set up any recipients. In order to transfer money to someone, you’ll have to set them up as a recipient.
        \n \n Let us help you get started with that.</string>
    <string name="tutorial_security_desc">With TransferX™ you can enjoy the confidence of superior encryption technology.</string>
    <string name="delete_user_message">Are you sure you want to delete \n%s as a recipient?</string>
    <string name="card_delete_message">Are you sure you want to delete this payment method?</string>
    <string name="phone">phone</string>
    <string name="make_transfer">Make new transfer</string>
    <string name="save_changes">Save Changes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="address_one">Address 1</string>
    <string name="address_two">Address 2</string>
    <string name="city">city</string>
    <string name="post_code">post code</string>
    <string name="add_payment_method">Add Payment Methods</string>
    <string name="add_payment">Add Payment Method</string>
    <string name="not_now">Not now</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">confirm password</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="set_transfer_time">Set transfer time</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="z_minutes">:00</string>
    <string name="f_minutes">:15</string>
    <string name="t_minutes">:30</string>
    <string name="ff_minutes">:45</string>
    <string name="am_pm">am/pm</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
</resources>