<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/activity"
        android:enabled="true"
        android:icon="@drawable/activity"
        android:title="@string/activity"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/transfer"
        android:enabled="true"
        android:icon="@drawable/new_transaction"
        android:title="@string/transfer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/recipients"
        android:enabled="true"
        android:icon="@drawable/recipients"
        android:title="@string/recipients"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>