<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="@dimen/left_right_main_screen"
            android:layout_marginRight="@dimen/left_right_main_screen"
            android:layout_marginTop="@dimen/left_right_main_screen"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <include layout="@layout/email_field" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_right_main_screen"
                android:layout_weight="0.4"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/password_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/left_right_main_screen"
                android:layout_weight="0.6"
                android:ellipsize="end"
                android:gravity="right"
                android:maxLines="1"
                android:text="@string/email_address"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:visibility="gone" />

        </LinearLayout>


        <android.support.design.widget.TextInputEditText
            android:id="@+id/second_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="48dp"
            android:layout_marginLeft="@dimen/left_right_main_screen"
            android:layout_marginRight="@dimen/left_right_main_screen"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="16sp" />


        <Button
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/oval_button_black"
            android:text="@string/next"
            android:theme="@style/Button.Black" />

        <Button
            android:id="@+id/create_account"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/oval_button_white"
            android:text="@string/create_an_account"
            android:textColor="@color/black"
            android:theme="@style/Button.White" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>