<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/success_background"
        android:tint="@color/green_blue" />


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="@dimen/left_right_main_screen"
        android:layout_marginRight="@dimen/left_right_main_screen"
        android:layout_marginTop="100dp"
        android:maxLines="2"
        android:text="@string/title_recover_success"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/check_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="@dimen/left_right_main_screen"
        android:layout_marginRight="@dimen/left_right_main_screen"
        android:maxLines="2"
        android:text="@string/check_mail"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <Button
        android:id="@+id/sign_in"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/check_email"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/oval_button_white_two"
        android:text="@string/sign_in"
        android:textColor="@color/green"
        android:theme="@style/Button.White" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:layout_marginLeft="@dimen/left_right_main_screen"
        android:layout_marginRight="@dimen/left_right_main_screen"
        android:maxLines="2"
        android:gravity="center_horizontal"
        android:text="@string/didnt_receive"
        android:textColor="@color/white"
        android:textSize="16sp" />


</RelativeLayout>