<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/changeButtonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/left_right_main_screen"
            android:layout_marginTop="52dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/CommonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="@dimen/left_right_main_screen"
            android:layout_marginRight="@dimen/left_right_main_screen"
            android:layout_marginTop="32dp"
            android:text="@string/change_your_password"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            style="@style/CommonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_right_main_screen"
            android:layout_marginRight="@dimen/left_right_main_screen"
            android:text="@string/current_password"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/currentPassword"
            style="@style/CommonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="48dp"
            android:layout_marginLeft="@dimen/left_right_main_screen"
            android:layout_marginRight="@dimen/left_right_main_screen"
            android:background="@drawable/underline_normal"
            android:hint="@string/password"
            android:inputType="textNoSuggestions|textPassword"
            android:lineSpacingExtra="2sp"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:theme="@style/Button.Black" />


        <TextView
            style="@style/CommonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_right_main_screen"
            android:layout_marginRight="@dimen/left_right_main_screen"
            android:text="@string/new_password"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newPassword"
            style="@style/CommonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="@dimen/left_right_main_screen"
            android:layout_marginRight="@dimen/left_right_main_screen"
            android:background="@drawable/underline_normal"
            android:hint="@string/enter_a_new_password"
            android:inputType="textNoSuggestions|textPassword"
            android:lineSpacingExtra="2sp"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:theme="@style/Button.Black" />


        <TextView
            style="@style/CommonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_right_main_screen"
            android:layout_marginRight="@dimen/left_right_main_screen"
            android:text="@string/confirm_password"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirmPassword"
            style="@style/CommonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="@dimen/left_right_main_screen"
            android:layout_marginRight="@dimen/left_right_main_screen"
            android:background="@drawable/underline_normal"
            android:hint="@string/confirm_new_password"
            android:inputType="textNoSuggestions|textPassword"
            android:lineSpacingExtra="2sp"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:theme="@style/Button.Black" />


        <Button
            android:id="@+id/savePassword"
            style="@style/CommonButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/oval_button_gray"
            android:enabled="false"
            android:letterSpacing="0.17"
            android:lineSpacingExtra="2sp"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            android:theme="@style/Button.Black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>